# near-ai-assistant

./: .env.example  README.md  pyproject.toml
.github/workflows/: main.yaml
ai/: .env.example  .gitignore  pyproject.toml
ai/config/: general.yaml  system_prompt.yaml
ai/src/: logger.py  main.py
ai/src/agent/: agent.py  prompt.py
ai/src/agent/tools/: schema.py
config/: general.yaml  system_prompt.yaml
front/: .eslintrc.yaml  .prettierrc.yaml  index.html  package.json
front/src/: App.tsx  index.css  socket.ts
src/: config.py  logger.py  main.py
src/agent/: agent.py  prompt.py  utils.py
src/agent/tools/: __init__.py  functions.py  handler.py
